fix: prevent card title text wrapping

--- a/generator/css/cards.css
+++ b/generator/css/cards.css
@@ -112,6 +112,7 @@
     font-weight: bold;
     background-color: inherit;
     color: white;
+    white-space: nowrap;
 }
 .card-title-16 {
     font-size: 16pt;
